# SqueezedAttention_cpu

SqueezedAttention-main/: offline_clustering.py  run_offline_clustering.sh
SqueezedAttention-main/LongBench/: pred.py  run_different_prefix_offline.sh
SqueezedAttention-main/fixed-prompt-clusters/: centroids_labels_dict_0_85.pt  centroids_labels_dict_0_96.pt  centroids_labels_dict_100_96.pt  centroids_labels_dict_101_96.pt  centroids_labels_dict_102_96.pt  centroids_labels_dict_103_96.pt  centroids_labels_dict_104_96.pt  centroids_labels_dict_105_96.pt  centroids_labels_dict_106_96.pt  centroids_labels_dict_107_96.pt  centroids_labels_dict_108_96.pt  (+643 more)
value_aware_squeezed_project/: README.md  pyproject.toml  requirements.txt
value_aware_squeezed_project/benchmarks/: benchmark_ablation.py  benchmark_accuracy.py  benchmark_latency.py  benchmark_longbench.py  plot_comparison.py  synthetic_benchmark.py
value_aware_squeezed_project/configs/: sample_context.txt
value_aware_squeezed_project/docs/: INTEGRATION.md  METHODOLOGY.md  RESULTS.md
value_aware_squeezed_project/patches/: offline_clustering_value_aware.py
value_aware_squeezed_project/results/: ablation.json  accuracy_benchmark.json  latency_benchmark.json
value_aware_squeezed_project/results/pareto_sweep/: accuracy_s0.7.json  accuracy_s0.8.json  accuracy_s0.85.json  accuracy_s0.9.json  accuracy_s0.95.json
value_aware_squeezed_project/scripts/: run_all_benchmarks.sh  run_pareto_sweep.sh
value_aware_squeezed_project/tests/: test_all.py
value_aware_squeezed_project/value_aware_squeezed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+884 files in other folders)
